--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   },
   "homepage": "https://github.com/tketron/express-pg#readme",
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.0",
     "pg": "^7.4.3"
+  },
+  "devDependencies": {
+    "supertest": "^3.1.0"
   }
 }
